feat: PR B import safety - bounded queries, limits, keyed errors, Java 17 target
- WorkforceExcelImportService: bounded reverse/validate/preview, configurable
  file/row limits (20MB/20000) and preview cap, duplicate normalized-code check
- All import errors keyed (WORKFORCE_IMPORT_*, EXCEL_*) with Liquibase V88
  ar-EG/en-US translations; ApiExceptionHandler resolves by key with fallback
- Backend targets Java 17 (options.release=17); Docker images stay on Temurin 26
- Fixes: ApiExceptionHandlerTests mock stubs; auth tests enable the workforce
  contractorAccounts feature flag
- 13-case WorkforceExcelImportServiceTests suite; frontend api-error spec aligned
  to server-localized messages