@@ -81,7 +81,7 @@ class ReportingGenerationContractTests {
     @AfterEach
     void cleanup() {
         try {
-            String app = createdApps.isEmpty() ? null : createdApps.getLast();
+            String app = createdApps.isEmpty() ? null : createdApps.get(createdApps.size() - 1);
             if (app != null) {
                 TenantContext.set(app);
                 tx.executeWithoutResult(status -> {
